# medtech-clinician-ui

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
qml/: AlarmPanel.qml  Dashboard.qml  VitalCard.qml  main.qml
src/: CMakeLists.txt  main.cpp
src/models/: ui_model.cpp  ui_model.h  vital_reading.cpp  vital_reading.h
src/mqtt/: mqtt_client.cpp  mqtt_client.h  mqtt_payload.cpp  mqtt_payload.h
src/ui/: dashboard_window.cpp  dashboard_window.h  vital_renderer.cpp  vital_renderer.h
src/utils/: config.cpp  config.h  logger.cpp  logger.h
tests/: CMakeLists.txt  test_fixtures.h  test_mqtt_client.cpp  test_vital_renderer.cpp
